--- a/app/globals.css
+++ b/app/globals.css
@@ -116,3 +116,10 @@ a {
 .link-btn:hover {
   background-color: #e4e4e4;
 }
+.card-border {
+  border: 1px solid #fff;
+}
+
+.card-border:hover {
+  border: 1px solid #4ea9ff;
+}
